syntax = "proto3";

package alerta;

service AlertaService {
  rpc IniciarAlerta (Nivel) returns (AlertaResposta) {}
  rpc NotificarResponsaveis (Responsaveis) returns (AlertaResposta) {}
}

message AlertaResposta {
  string status = 1;
}

message Responsaveis {
  repeated int32 usuarios = 1;
}

message Nivel {
  repeated int32 nivel = 1;
}